--- a/pages/emergency.html
+++ b/pages/emergency.html
@@ -23,9 +23,8 @@
     <!--================ STYLE CSS | Omonjon ================-->
     <link rel="stylesheet" href="../assets/styles/main.css?v=1.5">
     <link rel="stylesheet" href="../assets/styles/breakpoints.css?v=0.5">
-    <link rel="stylesheet" href="../assets/styles/signIn.css?v=0.2">
 
-    <title>Вход</title>
+    <title>Экстренные услуги</title>
 </head>
 <body>
 <!--================ MENUS MODAL | Omonjon ================-->
@@ -88,7 +87,7 @@
                 </ul>
                 <!-- End Language -->
             </div>
-            <a href="#"
+            <a href="./signIn.html"
                class="btn btn-white primary-radius mt-2 py-2 px-2 d-flex justify-content-center column-gap-2 w-100">
                 <img src="../assets/images/svg/user.svg" alt="" class="">
                 <span class="text-black fs-8 fw-regular">Войти</span>
@@ -149,12 +148,12 @@
                     </ul>
                     <!-- End Language -->
                 </div>
-                <a href="./emergency.html"
+                <a href="#"
                    class="btn transition btn-secondary transition primary-radius d-flex rounded-circle-mb column-gap-2 py-2 px-3">
                     <img src="../assets/images/svg/phone.svg" alt="" class="">
                     <span class="d-none d-xl-block text-white fs-8 fw-bold">Экстренный вызов</span>
                 </a>
-                <a href="#"
+                <a href="./signIn.html"
                    class="d-none d-sm-flex column-gap-2 rounded-circle-mb btn btn-white transition primary-radius py-2 px-3">
                     <img src="../assets/images/svg/user.svg" alt="" class="">
                     <span class="d-none d-xl-block text-black fs-8 fw-semibold">Войти</span>
@@ -170,35 +169,112 @@
 </header>
 
 <main>
-    <section class="signIn-section px-3 px-sm-0 py-4">
-        <div class="d-flex flex-column align-items-center">
-            <img src="../assets/images/svg/signin.svg" alt="">
-            <h5 class="text-black fs-1 fw-semibold mt-3 mb-2">Вход</h5>
-            <div class="fs-6 text-black mt-1 mb-4 text-center">Введите свои данные для входа в аккаунт.</div>
-            <form action="account.html" method="post" class="container-small d-flex flex-column mt-2">
-                 <div class="form-group mb-3">
-                     <label for="phoneNum1" class="form-label fs-8 text-light-emphasis">Номер телефона<span class="text-secondary ms-1">*</span></label>
-                     <input type="text" required class="form-control" placeholder="+998 __-___-__-__" id="phoneNum1" aria-describedby="emailHelp">
-                 </div>
-                <div class="form-group mb-3 position-relative ">
-                    <label for="passwordNum1" class="form-label fs-8 text-light-emphasis">Пароль<span class="text-secondary ms-1">*</span></label>
-                    <input type="password" required class="form-control" placeholder="Ваш пароль" id="passwordNum1" aria-describedby="emailHelp">
-                    <i class="bx bx-show show-hide"></i>
-                </div>
-                <div class="d-flex align-items-center justify-content-between mb-4">
-                    <div class="d-flex align-items-center">
-                        <input id="rememberMe" class="" type="checkbox" name="rememberMe">
-                        <label for="rememberMe" class="fs-7 text-black checkbox-label">Запомни меня</label>
+    <section class="emergency-section py-4 px-3">
+        <div class="container-mini d-flex align-items-center flex-column">
+            <img src="../assets/images/svg/phone-red.svg" alt="">
+            <h5 class="fw-semibold text-black fs-1 mt-3 mb-2">Экстренные услуги</h5>
+            <div class="fs-7 text-black text-center mt-1 mb-4">Нажмите кнопку вызова. Оплата после решения экстренных
+                проблем.
+            </div>
+            <div class="d-flex flex-column align-items-start bg-white primary-radius primary-border px-3 py-1 mb-2">
+                <div class="col-12 py-1 border-bottom-dashed">
+                    <div class="row py-2 px-0">
+                        <div class="col-sm-6 col-7">
+                            <h5 class="text-black">Эвакуация автомобиля</h5>
+                        </div>
+                        <div class="col-sm-6 col-5">
+                            <div class="fw-semibold text-black ms-lg-2 d-flex justify-content-end justify-content-md-start">275 000 сум</div>
+                        </div>
                     </div>
-                    <a href="#" class="text-primary fs-7">Забыли пароль?</a>
                 </div>
-                <button type="submit" class="btn btn-primary primary-radius mb-4">Войти</button>
-                <a href="./signUp.html" class="text-primary fs-7 text-center">Зарегистрироваться</a>
-            </form>
+                <div class="col-12 py-1 border-bottom-dashed">
+                    <div class="row py-2 px-0">
+                        <div class="col-sm-6 col-7">
+                            <h5 class="text-black">Содействие в сборе документов для страхового возмещения</h5>
+                        </div>
+                        <div class="col-sm-6 col-5">
+                            <div class="fw-semibold text-black ms-lg-2 d-flex justify-content-end justify-content-md-start">400 000 сум</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 py-1 border-bottom-dashed">
+                    <div class="row py-2 px-0">
+                        <div class="col-sm-6 col-7">
+                            <h5 class="text-black">Оформления "Европротокола"</h5>
+                        </div>
+                        <div class="col-sm-6 col-5">
+                            <div class="fw-semibold text-black ms-lg-2 d-flex justify-content-end justify-content-md-start">450 000 сум</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 py-1 border-bottom-dashed">
+                    <div class="row py-2 px-0">
+                        <div class="col-sm-6 col-7">
+                            <h5 class="text-black">Подвоз топлива</h5>
+                        </div>
+                        <div class="col-sm-6 col-5">
+                            <div class="fw-semibold text-black ms-lg-2 d-flex justify-content-end justify-content-md-start">100 000 сум</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 py-1 border-bottom-dashed">
+                    <div class="row py-2 px-0">
+                        <div class="col-sm-6 col-7">
+                            <h5 class="text-black">Замена колеса</h5>
+                        </div>
+                        <div class="col-sm-6 col-5">
+                            <div class="fw-semibold text-black ms-lg-2 d-flex justify-content-end justify-content-md-start">110 000 сум</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 py-1 border-bottom-dashed">
+                    <div class="row py-2 px-0">
+                        <div class="col-sm-6 col-7">
+                            <h5 class="text-black">Зарядка и запуск аккумулятора</h5>
+                        </div>
+                        <div class="col-sm-6 col-5">
+                            <div class="fw-semibold text-black ms-lg-2 d-flex justify-content-end justify-content-md-start">125 000 сум</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 py-1 border-bottom-dashed">
+                    <div class="row py-2 px-0">
+                        <div class="col-sm-6 col-7">
+                            <h5 class="text-black">Диагностика при невозможности запуска транспортного средства</h5>
+                        </div>
+                        <div class="col-sm-6 col-5">
+                            <div class="fw-semibold text-black ms-lg-2 d-flex justify-content-end justify-content-md-start">250 000 сум</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 py-1 border-bottom-dashed">
+                    <div class="row py-2 px-0">
+                        <div class="col-sm-6 col-7">
+                            <h5 class="text-black">Открытие автомобиля при блокировке или оставлении ключей внутри</h5>
+                        </div>
+                        <div class="col-sm-6 col-5">
+                            <div class="fw-semibold text-black ms-lg-2 d-flex justify-content-end justify-content-md-start">200 000 сум</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 py-1">
+                    <div class="row py-2 px-0">
+                        <div class="col-sm-6 col-7">
+                            <h5 class="text-black">Замена бензонасоса при неисправности</h5>
+                        </div>
+                        <div class="col-sm-6 col-5">
+                            <div class="fw-semibold text-black ms-lg-2 d-flex justify-content-end justify-content-md-start">300 000 сум</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a href="tel:+998977777777"
+               class="btn transition btn-secondary transition primary-radius d-flex justify-content-center w-100 py-12px column-gap-2 mt-4">
+                <img src="../assets/images/svg/phone.svg" alt="" class="">Экстренный вызов
+            </a>
         </div>
     </section>
 </main>
-
 
 <!--================ FOOTER | Omonjon ================-->
 <footer class="footer pt-5 mt-md-4 pb-4 bg-transparent">
